--- a/vignettes/MetaNeighbor.Rmd
+++ b/vignettes/MetaNeighbor.Rmd
@@ -16,7 +16,31 @@ vignette: >
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 ---
+MetaNeighbor: a method to rapidly assess cell type identity using both functional and random gene sets
+================
+Megan Crow, Sara Ballouz, Manthan Shah, Jesse Gillis
 
+
+-   [Introduction](#introduction)
+-   [Data type requirements](#data-type-requirements)
+-   [System requirements/estimated run times](#system-requirementsestimated-run-times)
+-   [Installation](#installation)
+-   [Methods](#methods)
+-   [Part 1: Supervised MetaNeighbor](#part-1-supervised-metaneighbor)
+    -   [Quick start](#quick-start)
+    -   [More detail](#more-detail)
+        -   [Load package and data](#load-package-and-data)
+        -   [Run MetaNeighbor](#run-metaneighbor)
+        -   [Plot results](#plot-results)
+-   [Part 2: MetaNeighbor for Data Exploration](#part-2-metaneighbor-for-data-exploration)
+    -   [Quick start](#quick-start-1)
+    -   [More detail](#more-detail-1)
+        -   [Load package and data](#load-package-and-data)
+        -   [Identify a highly variable gene set](#identify-a-highly-variable-gene-set)
+        -   [Run MetaNeighbor for data exploration](#run-metaneighbor-for-data-exploration)
+        -   [Plot results](#plot-results-1)
+        -   [Identify reciprocal top hits and high scoring cell type pairs](#identify-reciprocal-top-hits-and-high-scoring-cell-type-pairs)
+-   [FAQ and Contact Information](#faq-and-contact-information)
 # Introduction
 The purpose of this method is to measure the similarity of cells across single
 cell RNA-sequencing (scRNA-seq) datasets by sampling from both random and
