--- a/vignettes/MetaNeighbor.bib
+++ b/vignettes/MetaNeighbor.bib
@@ -1,5 +1,5 @@
-@article{ballouz2017
-  author = {Ballouz, Sara and Weber, Melanie and Pavlidis, Paul and Gillis, Jesse}
+@article{ballouz2017,
+  author = {Ballouz, Sara and Weber, Melanie and Pavlidis, Paul and Gillis, Jesse},
   title = {EGAD: ultra-fast functional analysis of gene networks},
   journal = {Bioinformatics},
   volume = {33},
@@ -9,8 +9,8 @@
   year = {2017}
 }
 
-@article{zeisel15
-  author = {Zeisel, Amit and Muñoz-Manchado, Ana B. and Codeluppi, Simone and Lönnerberg, Peter and La Manno, Gioele and Juréus, Anna and Marques, Sueli and Munguba, Hermany and He, Liqun and Betsholtz, Christer and Rolny, Charlotte and Castelo-Branco, Gonçalo and Hjerling-Leffler, Jens and Linnarsson, Sten}
+@article{zeisel15,
+  author = {Zeisel, Amit and Muñoz-Manchado, Ana B. and Codeluppi, Simone and Lönnerberg, Peter and La Manno, Gioele and Juréus, Anna and Marques, Sueli and Munguba, Hermany and He, Liqun and Betsholtz, Christer and Rolny, Charlotte and Castelo-Branco, Gonçalo and Hjerling-Leffler, Jens and Linnarsson, Sten},
   title = {Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq},
   journal = {Science},
   volume = {347},
@@ -20,8 +20,8 @@
   year = {2015}
 }
 
-@article{Tasic16
-  author = {Tasic, Bosiljka and Menon, Vilas and Nghi Nguyen, Thuc and Kyung Kim,  Tae and Jarsky, Tim and Yao, Zizhen and Levi, Boaz and T Gray, Lucas and A Sorensen, Staci and Dolbeare, Tim and Bertagnolli, Darren and Goldy, Jeff and Shapovalova, Nadiya and Parry, Sheana and Lee, Changkyu and Smith, Kimberly and Bernard, Amy and Madisen, Linda and M Sunkin, Susan and Hawrylycz, Michael and Koch, Christof and Zeng, Hongkui}
+@article{Tasic16,
+  author = {Tasic, Bosiljka and Menon, Vilas and Nghi Nguyen, Thuc and Kyung Kim, Tae and Jarsky, Tim and Yao, Zizhen and Levi, Boaz and T Gray, Lucas and A Sorensen, Staci and Dolbeare, Tim and Bertagnolli, Darren and Goldy, Jeff and Shapovalova, Nadiya and Parry, Sheana and Lee, Changkyu and Smith, Kimberly and Bernard, Amy and Madisen, Linda and M Sunkin, Susan and Hawrylycz, Michael and Koch, Christof and Zeng, Hongkui},
   title = {Adult mouse cortical cell taxonomy revealed by single cell transcriptomics},
   journal = {NATURE NEUROSCIENCE},
   volume = {19},
